[package]
name = "foldchain"
version = "0.1.0"
edition = "2021"


[dependencies]
# Core blockchain
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rocksdb = "0.21"
rayon = "1.8"

# Cryptography
k256 = { version = "0.13", features = ["ecdsa", "arithmetic", "ecdsa-core"] }
sha2 = "0.10"
ripemd = "0.1"
aes-gcm = { version = "0.10", features = ["aes"] }
argon2 = "0.5"
zeroize = "1.7"
rand = "0.8"  # Added missing dependency

# Utilities
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
thiserror = "1.0"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

# Networking
libp2p = { version = "0.52", features = ["tcp", "dns", "yamux", "noise", "websocket"] }
tokio = { version = "1.0", features = ["full"] }

# Protein folding integration
bio = "2.3"
ndarray = "0.15"
pdb = "0.7"
getrandom = "0.2"
serde_json = "1.0.141"
clap = { version = "4.5.41", features = ["derive"] }
image = "0.25.6"
img_hash = "3.2.0"
num_cpus = "1.13.0"  

[dev-dependencies]
tempfile = "3.8"
serial_test = "2.0"
mockall = "0.12"
test-case = "3.3"
